--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -1,8 +1,26 @@
 {
-  "nomeCinemaSala": "Multisala Grillo",
-  "titoloFilm": "AVATAR-Fuoco e Cenere",
-  "inizioSpettacoli": "Inizio Spettacoli Ore:",
-  "ore": "18:30 - 22:00 3D, 20:30 2D",
-  "festivita": "",
-  "urlImmagine": "https://www.mazaracinema.it/framehome/571359959_122196002870303188_7508817816757758341_n.jpg"
+  "nomeCinemaSala_1": "Multisala Grillo",
+  "titoloFilm_1": "AVATAR-Fuoco e Cenere",
+  "inizioSpettacoli_1": "Inizio Spettacoli Ore:",
+  "ore_1": "18:30 - 22:00 3D, 20:30 2D",
+  "festivita_1": "",
+  "urlImmagine_1": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg"
+}
+
+{
+  "nomeCinemaSala_2": "Multisala Grillo",
+  "titoloFilm_2": "AVATAR-Fuoco e Cenere",
+  "inizioSpettacoli_2": "Inizio Spettacoli Ore:",
+  "ore_2": "18:30 - 22:00 3D, 20:30 2D",
+  "festivita_2": "",
+  "urlImmagine_2": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg"
+}
+
+{
+  "nomeCinemaSala_3": "Multisala Grillo",
+  "titoloFilm_3": "AVATAR-Fuoco e Cenere",
+  "inizioSpettacoli_3": "Inizio Spettacoli Ore:",
+  "ore_3": "18:30 - 22:00 3D, 20:30 2D",
+  "festivita_3": "",
+  "urlImmagine_3": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg"
 }
