--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -4,5 +4,5 @@
   "inizioSpettacoli_1": "Inizio Spettacoli Ore:",
   "ore_1": "18:30 - 22:00 3D, 20:30 2D",
   "festivita_1": "",
-  "urlImmagine_1": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg"
+  "urlImmagine_1": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
 }
