--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -1,6 +1,6 @@
 {
   "nomeCinemaSala_1": "MULTISALA GRILLO",
-  "titoloFilm_1": "AVATAR\nFuoco e Cenere",
+  "titoloFilm_1": "Avatar\nFUEGO E FIAMMELLE",
   "inizioSpettacoli_1": "Inizio Spettacoli Ore:",
   "ore_1": "18:30 - 22:00 3D",
   "festivita_1": "",
