--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -14,7 +14,7 @@
   "urlImmagine_2": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true",
 
   "nomeCinemaSala_3": "CINEMA EDEN",
-  "titoloFilm_3": "Checco Zalone\nBUEN CAMINO",
+  "titoloFilm_3": "Checco Zalone\nBUEN CAMIONCINO",
   "inizioSpettacoli_3": "Inizio Spettacoli Ore:",
   "ore_3": "18:30 - 20:30 - 22:30",
   "festivita_3": "FESTIVI ANCHE: 16:30",
