--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -1,19 +1,40 @@
 {
   "nomeCinemaSala_1": "MULTISALA GRILLO",
-  "titoloFilm_1": "Avatar\nFUEGO E FIAMMELLE",
+  "titoloFilm_1": "AVATAR\nFUOCO E FIAMME",
   "inizioSpettacoli_1": "Inizio Spettacoli Ore:",
   "ore_1": "18:30 - 22:00 3D",
   "festivita_1": "",
   "urlImmagine_1": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true",
   
   "nomeCinemaSala_2": "MULTISALA GRILLO",
-  "titoloFilm_2": "Checco Zalone\nBUEN CAEMINO",
+  "titoloFilm_2": "CHECCO ZALONE\nBUEN CAMINO",
   "inizioSpettacoli_2": "Inizio Spettacoli Ore:",
   "ore_2": "18:30 - 20:30 - 22:30",
   "festivita_2": "FESTIVI ANCHE: 16:30",
   "urlImmagine_2": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true",
 
-  "nomeCinemaSala_3": "CINEMA EDEN",
+  "nomeCinemaSala_3": "MULTISALA GRILLO",
+  "titoloFilm_1": "SPONCEBOB\nUN'AVVENTURA DA PIRATI",
+  "inizioSpettacoli_1": "Inizio Spettacoli Ore:",
+  "ore_1": "18:30 - 22:00 3D",
+  "festivita_1": "",
+  "urlImmagine_1": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true",
+
+  "nomeCinemaSala_4": "CINEMA EDEN",
+  "titoloFilm_3": "Checco Zalone\nBUEN CAMINO",
+  "inizioSpettacoli_3": "Inizio Spettacoli Ore:",
+  "ore_3": "18:30 - 20:30 - 22:30",
+  "festivita_3": "FESTIVI ANCHE: 16:30",
+  "urlImmagine_3": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true",
+  
+  "nomeCinemaSala_5": "",
+  "titoloFilm_2": "Checco Zalone\nBUEN CAMINO",
+  "inizioSpettacoli_2": "Inizio Spettacoli Ore:",
+  "ore_2": "18:30 - 20:30 - 22:30",
+  "festivita_2": "FESTIVI ANCHE: 16:30",
+  "urlImmagine_2": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true",
+
+  "nomeCinemaSala_6": "",
   "titoloFilm_3": "Checco Zalone\nBUEN CAMIONCINO",
   "inizioSpettacoli_3": "Inizio Spettacoli Ore:",
   "ore_3": "18:30 - 20:30 - 22:30",
