--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -38,7 +38,7 @@
     },
     {
       "testoStatoProgrammazione": "DAL 8 GENNAIO:",
-      "nomeCinema": "MULTISALA GRILLO/CINEMA EDEN",
+      "nomeCinema": "MAZARACINEMA",
       "titoloFilm": "UNA DI FAMIGLIA\\nTHE HOUSEMAID",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00 - 20:15 - 22:30",
@@ -47,7 +47,7 @@
     },
     {
       "testoStatoProgrammazione": "DAL 15 GENNAIO:",
-      "nomeCinema": "MULTISALA GRILLO/CINEMA EDEN",
+      "nomeCinema": "MAZARACINEMA",
       "titoloFilm": "PAOLO SORRENTINO\\nLA GRAZIA",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00 - 20:15 - 22:30",
