--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -1,54 +1,54 @@
 {
   "listaFilm": [
     {
-      "testoStatoProgrammazione": "IN PROGAMMAZIONE:",
+      "testoStatoProgrammazione": "IN PROGAMMAZIONE",
       "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "AVATAR\\nFUOCO E FIAMME",
+      "titoloFilm": "AVATAR - FUOCO E FIAMME",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:30 - 22:00 3D",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "IN PROGAMMAZIONE:",
+      "testoStatoProgrammazione": "IN PROGAMMAZIONE",
       "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "CHECCO ZALONE\\nBUEN CAMINO",
+      "titoloFilm": "CHECCO ZALONE - BUEN CAMINO",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30 F - 18:30 - 20:30 - 22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "IN PROGAMMAZIONE:",
+      "testoStatoProgrammazione": "IN PROGAMMAZIONE",
       "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "SPONCEBOB\\nBUEN CAMINO",
+      "titoloFilm": "SPONCEBOB - AVVENTURA PIRATI",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30 F - 18:30 - 20:30 - 22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Sponcebob.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "IN PROGAMMAZIONE:",
+      "testoStatoProgrammazione": "IN PROGAMMAZIONE",
       "nomeCinema": "CINEMA EDEN",
-      "titoloFilm": "CHECCO ZALONE\\nBUEN CAMINO",
+      "titoloFilm": "CHECCO ZALONE - BUEN CAMINO",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30 F - 18:30 - 20:30 - 22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "DAL 8 GENNAIO:",
+      "testoStatoProgrammazione": "DAL 8 GENNAIO",
       "nomeCinema": "MAZARACINEMA",
-      "titoloFilm": "UNA DI FAMIGLIA\\nTHE HOUSEMAID",
+      "titoloFilm": "UNA DI FAMIGLIA - THE HOUSEMAID",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00 - 20:15 - 22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "DAL 15 GENNAIO:",
+      "testoStatoProgrammazione": "DAL 15 GENNAIO",
       "nomeCinema": "MAZARACINEMA",
-      "titoloFilm": "PAOLO SORRENTINO\\nLA GRAZIA",
+      "titoloFilm": "PAOLO SORRENTINO - LA GRAZIA",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00 - 20:15 - 22:30",
       "festivita": "",
