--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -5,7 +5,7 @@
       "nomeCinema": "MULTISALA GRILLO",
       "titoloFilm": "AVATAR - FUOCO E FIAMME",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:30 - 22:00 3D",
+      "ore": "18:30-22:00/3D",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
     },
@@ -14,7 +14,7 @@
       "nomeCinema": "MULTISALA GRILLO",
       "titoloFilm": "CHECCO ZALONE - BUEN CAMINO",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "16:30 F - 18:30 - 20:30 - 22:30",
+      "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
@@ -23,7 +23,7 @@
       "nomeCinema": "MULTISALA GRILLO",
       "titoloFilm": "SPONCEBOB - AVVENTURA PIRATI",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "16:30 F - 18:30 - 20:30 - 22:30",
+      "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Sponcebob.jpg?raw=true"
     },
@@ -32,7 +32,7 @@
       "nomeCinema": "CINEMA EDEN",
       "titoloFilm": "CHECCO ZALONE - BUEN CAMINO",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "16:30 F - 18:30 - 20:30 - 22:30",
+      "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
@@ -41,7 +41,7 @@
       "nomeCinema": "MAZARACINEMA",
       "titoloFilm": "UNA DI FAMIGLIA - THE HOUSEMAID",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:00 - 20:15 - 22:30",
+      "ore": "18:00-20:15-22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
@@ -50,7 +50,7 @@
       "nomeCinema": "MAZARACINEMA",
       "titoloFilm": "PAOLO SORRENTINO - LA GRAZIA",
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:00 - 20:15 - 22:30",
+      "ore": "18:00-20:15-22:30",
       "festivita": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/La-Grazia.jpg?raw=true"
     }
