--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -7,6 +7,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:30-22:00/3D",
       "festivita": "",
+      "allineamento": "D",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
     },
     {
@@ -16,6 +17,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
+      "allineamento": "U",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
     {
@@ -25,6 +27,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
+      "allineamento": "D",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Sponcebob.jpg?raw=true"
     },
     {
@@ -34,6 +37,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
+      "allineamento": "U",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
     {
@@ -43,6 +47,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00-20:15-22:30",
       "festivita": "",
+      "allineamento": "U",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
     {
@@ -52,6 +57,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00-20:15-22:30",
       "festivita": "",
+      "allineamento": "D",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/La-Grazia.jpg?raw=true"
     }
   ]
