--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -7,7 +7,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:30-22:00/3D",
       "festivita": "",
-      "allineamento": "D",
+      "allineamento": "C",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
     },
     {
@@ -27,7 +27,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "16:30/F-18:30-20:30-22:30",
       "festivita": "",
-      "allineamento": "D",
+      "allineamento": "C",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Sponcebob.jpg?raw=true"
     },
     {
@@ -47,7 +47,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00-20:15-22:30",
       "festivita": "",
-      "allineamento": "D",
+      "allineamento": "C",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
     {
@@ -57,7 +57,7 @@
       "inizioSpettacoli": "Inizio Spettacoli Ore:",
       "ore": "18:00-20:15-22:30",
       "festivita": "",
-      "allineamento": "U",
+      "allineamento": "C",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/La-Grazia.jpg?raw=true"
     }
   ]
