--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -1,72 +1,72 @@
 {
   "listaFilm": [
     {
-      "testoStatoProgrammazione": "In Programmazione",
-      "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "AVATAR - FUOCO E FIAMME",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "20:30/3D",
-      "festivita": "",
+      "textStatoProgrammazione": "In Programmazione",
+      "textNomeCinema": "MULTISALA GRILLO",
+      "textTitoloFilm": "AVATAR - FUOCO E FIAMME",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "20:30/3D",
+      "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
       "urlTrailer": "https://www.youtube.com/watch?v=MzVvd9ekYOE",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Avatar.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "In Programmazione",
-      "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "CHECCO ZALONE - BUEN CAMINO",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "16:30/F-18:30-20:30-22:30",
-      "festivita": "",
+      "textStatoProgrammazione": "In Programmazione",
+      "textNomeCinema": "MULTISALA GRILLO",
+      "textTitoloFilm": "CHECCO ZALONE - BUEN CAMINO",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "16:30/F-18:30-20:30-22:30",
+      "textFestivita": "",
       "allineamento": "U",
       "dataNotifica": "",
       "urlTrailer": "https://www.youtube.com/watch?v=2E-VdjZMsZA",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/BUEN-CAMINO.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "In Programmazione",
-      "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "SPONCEBOB - AVVENTURA PIRATI",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "16:30/F",
-      "festivita": "",
+      "textStatoProgrammazione": "In Programmazione",
+      "textNomeCinema": "MULTISALA GRILLO",
+      "textTitoloFilm": "SPONCEBOB - AVVENTURA PIRATI",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "16:30/F",
+      "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
       "urlTrailer": "https://www.youtube.com/watch?v=f8wWpBxE0N4",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Sponcebob.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "In Programmazione",
-      "nomeCinema": "MULTISALA GRILLO",
-      "titoloFilm": "PRIMAVERA - VIVALDI",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:30",
-      "festivita": "",
+      "textStatoProgrammazione": "In Programmazione",
+      "textNomeCinema": "MULTISALA GRILLO",
+      "textTitoloFilm": "PRIMAVERA - VIVALDI",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "18:30",
+      "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
       "urlTrailer": "https://www.youtube.com/watch?v=Ny19a7DnduQ",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Primavera.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "In Programmazione",
-      "nomeCinema": "CINEMA EDEN",
-      "titoloFilm": "UNA DI FAMIGLIA - THE HOUSEMAID",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:00-20:15-22:30",
-      "festivita": "",
+      "textStatoProgrammazione": "In Programmazione",
+      "textNomeCinema": "CINEMA EDEN",
+      "textTitoloFilm": "UNA DI FAMIGLIA - THE HOUSEMAID",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "18:00-20:15-22:30",
+      "textFestivita": "",
       "allineamento": "U",
       "dataNotifica": "10/01/2026",
       "urlTrailer": "https://www.youtube.com/watch?v=EtBxHnBHdv4",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
     {
-      "testoStatoProgrammazione": "Dal 15 Gennaio",
-      "nomeCinema": "MAZARACINEMA",
-      "titoloFilm": "PAOLO SORRENTINO - LA GRAZIA",
-      "inizioSpettacoli": "Inizio Spettacoli Ore:",
-      "ore": "18:00-20:15-22:30",
-      "festivita": "",
+      "textStatoProgrammazione": "Dal 15 Gennaio",
+      "textNomeCinema": "MAZARACINEMA",
+      "textTitoloFilm": "PAOLO SORRENTINO - LA GRAZIA",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "18:00-20:15-22:30",
+      "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "15/01/2026",
       "urlTrailer": "",
