--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -27,7 +27,7 @@
     {
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "MULTISALA GRILLO",
-      "textTitoloFilm": "SPONCEBOB - AVVENTURA PIRATI",
+      "textTitoloFilm": "SPONCEBOB - UN'AVVENTURA DA PIRATI Extremaaaaa",
       "textInizioSpettacoli": "Inizio Spettacoli Ore:",
       "textOre": "16:30/F",
       "textFestivita": "",
