--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -27,7 +27,7 @@
     {
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "MULTISALA GRILLO",
-      "textTitoloFilm": "SPONCEBOB\nUn?Avventura da Pirati",
+      "textTitoloFilm": "SPONCEBOB\nUn'Avventura da Pirati Fantasticissima",
       "textInizioSpettacoli": "Inizio Spettacoli Ore:",
       "textOre": "16:30/F",
       "textFestivita": "",
@@ -61,7 +61,7 @@
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/Una-Di-Famiglia.jpg?raw=true"
     },
     {
-      "textStatoProgrammazione": "Dal 15 Gennaio",
+      "textStatoProgrammazione": "Dal 16 Gennaio",
       "textNomeCinema": "MAZARACINEMA",
       "textTitoloFilm": "PAOLO SORRENTINO - LA GRAZIA",
       "textInizioSpettacoli": "Inizio Spettacoli Ore:",
