--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -3,7 +3,7 @@
     {
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "MULTISALA GRILLO",
-      "textTitoloFilm": "CHECCO ZALONE - BUEN CAMINO",
+      "textTitoloFilm": "BUEN CAMINO - Checco Zalone",
       "textInizioSpettacoli": "Inizio Spettacoli Ore:",
       "textOre": "16:30/F-18:30-20:30-22:30",
       "textFestivita": "",
