--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -57,7 +57,7 @@
       "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
-      "urlTrailer": "https://www.youtube.com/watch?v=nEZq1gcyoD0",
+      "urlTrailer": "https://www.youtube.com/watch?v=sSk9O013Suo",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/send-help.jpg?raw=true"
     },
     {
