--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -52,8 +52,8 @@
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "CINEMA EDEN",
       "textTitoloFilm": "SEND HELP",
-      "textInizioSpettacoli": "22:30",
-      "textOre": "",
+      "textInizioSpettacoli": "",
+      "textOre": "22:30",
       "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
