--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -28,8 +28,8 @@
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "MULTISALA GRILLO",
       "textTitoloFilm": "LE COSE NON DETTE\nGabriele Muccino",
-      "textInizioSpettacoli": "16:30/F-18:30-20:30-22:30",
-      "textOre": "",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
+      "textOre": "16:30/F-18:30-20:30-22:30",
       "textFestivita": "",
       "allineamento": "C",
       "dataNotifica": "",
@@ -52,7 +52,7 @@
       "textStatoProgrammazione": "In Programmazione",
       "textNomeCinema": "CINEMA EDEN",
       "textTitoloFilm": "SEND HELP",
-      "textInizioSpettacoli": "",
+      "textInizioSpettacoli": "Inizio Spettacoli Ore:",
       "textOre": "22:30",
       "textFestivita": "",
       "allineamento": "C",
