--- a/Configurazione-App-JSON.json
+++ b/Configurazione-App-JSON.json
@@ -17,7 +17,7 @@
       "textOre": "18:00",
       "allineamento": "C",
       "dataNotifica": "",
-      "urlTrailer": "https://www.youtube.com/watch?v=MZwx6RPrPzs",
+      "urlTrailer": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/La-Grazia.jpg?raw=true"
     },
     {
@@ -36,7 +36,7 @@
       "textTitoloFilm": "2 CUORI E 2 CAPANNE",
       "textOre": "16:30/F-18:30-20:30",
       "allineamento": "C",
-      "dataNotifica": "29/01/2026",
+      "dataNotifica": "30/01/2026",
       "urlTrailer": "",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/2cuori2capanne.jpg?raw=true"
     },
@@ -46,7 +46,7 @@
       "textTitoloFilm": "SEND HELP",
       "textOre": "22:30",
       "allineamento": "C",
-      "dataNotifica": "29/01/2026",
+      "dataNotifica": "30/01/2026",
       "urlTrailer": "https://www.youtube.com/watch?v=sSk9O013Suo",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/send-help.jpg?raw=true"
     },
@@ -56,7 +56,7 @@
       "textTitoloFilm": "IL MAGO DEL CREMLINO\nLe origini di Putin",
       "textOre": "",
       "allineamento": "C",
-      "dataNotifica": "29/01/2026",
+      "dataNotifica": "30/01/2026",
       "urlTrailer": "https://www.youtube.com/watch?v=mL2P2O441VE",
       "urlImmagine": "https://github.com/supermario1481-ai/Configurazione-App-JSON.json/blob/main/il-mago-del-cremlino.jpg?raw=true"
     }
